workspace = { members = ['kamasu_core', 'net/wasabi'] }

[package]
name = "kamasu"
version = "0.1.0"
edition = "2021"
default-run = "kamasu"

[features]
default = ["wasabi"]
wasabi = ["dep:net_wasabi", "dep:noli"]

[[bin]]
name = "kamasu"
path = "src/main.rs"
required-features = ["wasabi"]

[dependencies]
kamasu_core = { path = "./kamasu_core" }
net_wasabi = { path = "./net/wasabi", optional = true }
noli = { git = "https://github.com/hikalium/wasabi.git", branch = "for_saba", optional = true}
